<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ComPiNion</string>
    <string name="welcome">Bienvenue!</string>

    <string name="serie">Série</string>
    <string name="merite">Mérite</string>

    <!--Home Fragment-->
    <string name="nav_open">Ouvrir</string>
    <string name="nav_close">Fermer</string>

    <!--Settings Fragment-->
    <string name="settings_themes">Choisir le thème</string>
    <string name="choosetext">Choisissez la couleur de votre application!</string>
    <string name="blue">Bleu</string>
    <string name="red">Rouge</string>
    <string name="green">Vert</string>
    <string name="settings_langue_TEXT">L\'application va être relancé, êtes vous sûr ? </string>
    <string name="settings_langue">Mettre la langue en anglais</string>
    <string name="settings_pseudo">Changer de pseudo</string>
    <string name="settings_password">Changer de mot de passe</string>
    <string name="settings_companion">Changer de companion</string>
    <string name="settings_logout">Déconnexion</string>

    <!--Login Activity-->
    <string name="connectez_vous">Déjà membre? Connectez-vous!</string>
    <string name="btnConnexion">Connexion</string>
    <string name="creation">Vous n\'êtes pas membre? Rejoignez-nous!</string>

    <!--Create Account Fragment-->
    <string name="titre_createAccount">Créez un nouveau compte!</string>
    <string name="nomHint_createAccount">Nom</string>
    <string name="prenomHint_createAccount">Prénom</string>
    <string name="pseudoHint_createAccount">Pseudo</string>
    <string name="emailHint_createAccount">Email</string>
    <string name="passwordHint_createAccount">Mot de passe</string>
    <string name="confirmPasswordHint_createAccount">Confirmer le mot de passe</string>
    <string name="btcreerCompte">Creer un compte</string>

    <!--LimitSelection Activity-->
    <string name="selectLimit">Choisissez une limite de cigarette :</string>
    <string name="selectCharacter">Choisissez votre Compinion</string>

    <!--Agreement Activity-->
    <string name="iAgree">J\'accepte</string>
    <string name="suivant">Suivant</string>
    <string name="errAgree">Veuillez accepter les termes et conditions</string>

    <string name="agreement_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non
        risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.
        Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non,
        mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl
        sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim.
        Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue.
        Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue
        blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
        cubilia Curae; Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas
        adipiscing ante non diam sodales hendrerit.</string>


    <!--Autre-->
    <string name="past_streak">Séries précédentes :</string>
    <string name="add_friend">Suivre</string>
    <string name="remove_friend">Retirer</string>
    <string name="block">Bloquer</string>
    <string name="unblock">Débloquer</string>
    <string name="confirmer">Confirmer</string>
    <string name="annuler">Annuler</string>
    <string name="all">Tous</string>
    <string name="friend">Amis</string>
    <string name="blocked">Indésirables</string>

</resources>