<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/label_passwordDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_pseudo"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etCurrentPassword_DialogPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/passwordHint_createAccount"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etNewPassword_DialogPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/settings_password"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etConfirmPassword_DialogPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/confirmPasswordHint_createAccount"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/errNewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="#C12C2C"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel_DialogPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#00FFFFFF"
            android:text="@string/annuler"
            android:textColor="@color/hardBlue"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnConfirmer_dialogPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#00FFFFFF"
            android:text="@string/confirmer"
            android:textColor="@color/hardBlue"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>