<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDE0F4"
    android:orientation="vertical"
    tools:context=".AgreementActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="147dp"
        android:layout_gravity="right|top"
        android:scaleType="fitStart"
        android:tint="@color/hardBlue"
        android:tintMode="src_in"
        app:srcCompat="@drawable/halfcircle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAgreementText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agreement_text"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iAgree"
            android:textColor="@color/hardBlue"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:backgroundTint="@color/hardBlue"
            android:paddingHorizontal="60dp"
            android:text="@string/suivant"
            android:textColor="@color/white" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="147dp"
        android:layout_gravity="bottom|left"
        android:rotation="180"
        android:scaleType="fitStart"
        android:tint="@color/hardBlue"
        android:tintMode="src_in"
        app:srcCompat="@drawable/halfcircle" />

</FrameLayout>