<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    android:padding="15dp"
    tools:context=".SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivCharacter_Settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/bordercircle"
            android:foregroundGravity="center"
            android:padding="20dp"
            android:stateListAnimator="@null"
            app:srcCompat="@drawable/ch_rabbit" />

        <LinearLayout
            android:id="@+id/lv_Profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvProfile_Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend"
                android:text="Profile"
                android:textColor="@color/hardBlue"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvChangePseudo_Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="20dp"
                android:drawableTint="@color/hardBlue"
                android:fontFamily="@font/lexend"
                android:gravity="center_vertical"
                android:text="@string/settings_pseudo"
                android:textColor="@color/hardBlue"
                android:textSize="26dp" />

            <TextView
                android:id="@+id/tvChangePassword_Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="20dp"
                android:drawableTint="@color/hardBlue"
                android:fontFamily="@font/lexend"
                android:gravity="center_vertical"
                android:text="@string/settings_password"
                android:textColor="@color/hardBlue"
                android:textSize="26dp" />

            <TextView
                android:id="@+id/tvChangeCompanion_Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableLeft="@drawable/baseline_catching_pokemon_24"
                android:drawablePadding="20dp"
                android:drawableTint="@color/hardBlue"
                android:fontFamily="@font/lexend"
                android:gravity="center_vertical"
                android:text="@string/settings_companion"
                android:textColor="@color/hardBlue"
                android:textSize="26dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lv_apparence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvChangeApparence_Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend"
                android:text="Apparence"
                android:textColor="@color/hardBlue"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvChangeTheme_Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableLeft="@drawable/ic_color"
                android:drawablePadding="20dp"
                android:drawableTint="@color/hardBlue"
                android:fontFamily="@font/lexend"
                android:gravity="center_vertical"
                android:text="@string/settings_themes"
                android:textColor="@color/hardBlue"
                android:textSize="26dp" />

            <TextView
                android:id="@+id/tvLanguage_Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableLeft="@drawable/ic_language"
                android:drawablePadding="20dp"
                android:drawableTint="@color/hardBlue"
                android:fontFamily="@font/lexend"
                android:gravity="center_vertical"
                android:text="@string/settings_langue"
                android:textColor="@color/hardBlue"
                android:textSize="26dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvLogout_Settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/ic_logout"
            android:drawablePadding="20dp"
            android:fontFamily="@font/lexend"
            android:gravity="center_vertical"
            android:text="@string/settings_logout"
            android:textColor="@color/red"
            android:textSize="28dp"
            android:textStyle="bold" />
    </LinearLayout>

</FrameLayout>